--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siro-media-library",
-  "version": "0.1.5",
+  "version": "0.1.9",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
