--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siro-media-library",
-  "version": "0.2.96",
+  "version": "0.2.98",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@storybook/addon-actions": "^6.5.9",
@@ -34,14 +35,14 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "storybook-addon-next": "^1.6.9",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.6"
   },
   "peerDependencies": {
     "aws-amplify": "^5.2.5",
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.6"
   },
   "dependencies": {
     "rollup-plugin-import-css": "^3.3.1",
