--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siro-media-library",
-  "version": "0.2.98",
+  "version": "0.3.2",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -35,14 +35,13 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "storybook-addon-next": "^1.6.9",
-    "styled-components": "^6.1.6"
+    "styled-components": "^5.3.10"
   },
   "peerDependencies": {
-    "aws-amplify": "^5.2.5",
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.6"
+    "@radix-ui/react-dialog": "^1.0.5"
   },
   "dependencies": {
     "rollup-plugin-import-css": "^3.3.1",
